--- a/Stacked model.ipynb
+++ b/Stacked model.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 297,
    "id": "5e814081",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import libraries\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 298,
    "id": "a0f10641",
    "metadata": {},
    "outputs": [
@@ -76,49 +77,29 @@
       "46      0\n",
       "47      0\n",
       "48      1\n",
-      "49      0\n",
-      "y_test\n",
-      "28    0\n",
-      "31    1\n",
-      "23    1\n",
-      "21    0\n",
-      "27    1\n",
-      "47    0\n",
-      "18    0\n",
-      "12    1\n",
-      "24    0\n",
-      "33    1\n",
-      "Name: Liked, dtype: int64\n"
+      "49      0\n"
      ]
     }
    ],
    "source": [
-    "# combine both csv's\n",
+    "# combine both DT and NN csv's\n",
     "df = pd.concat(map(pd.read_csv, ['DT_out_new.csv', 'NN_out_new.csv']), ignore_index=False)\n",
     "new_output = df.to_csv(\"new_ouput.csv\")\n",
     "df2 = pd.read_csv(\"new_ouput.csv\")\n",
+    "\n",
+    "# drop the second index column\n",
     "df2 = df2.drop(columns=['Unnamed: 0'])\n",
     "print(df2)\n",
     "\n",
+    "# splits\n",
     "X_train, Y_test, y_train, y_test = train_test_split(df2, df2[\"Liked\"], test_size=.20)\n",
-    "print(\"y_test\")\n",
-    "print(y_test)"
+    "# print(\"y_test\")\n",
+    "# print(y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
-   "id": "2b85b1de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# split \n",
-    "#X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 299,
    "id": "c80567ab",
    "metadata": {},
    "outputs": [
@@ -126,32 +107,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Training Set Accuracy: 1.0\n",
-      "- Test Set Accuracy: 0.5\n"
+      "Training Set Accuracy: 1.0\n",
+      "Test Set Accuracy: 0.6\n"
      ]
     }
    ],
    "source": [
-    "dt = DecisionTreeClassifier(max_depth=5) # Define classifier\n",
-    "dt.fit(X_train, y_train) # Train model\n",
+    "# Decision Tree Classifier - 5 levels in tree\n",
+    "dt = DecisionTreeClassifier(max_depth=5) \n",
+    "# Fit DT to the training data\n",
+    "dt.fit(X_train, y_train) \n",
     "\n",
-    "# Make predictions\n",
+    "# Make predictions of X train to test to the accuracy of Y train and test\n",
     "y_train_pred = dt.predict(X_train)\n",
     "y_test_pred = dt.predict(X_test)\n",
     "\n",
-    "# Training set performance\n",
-    "dt_train_accuracy = accuracy_score(y_train, y_train_pred) # Calculate Accuracy\n",
+    "# Train and Test set - Accuracy\n",
+    "dt_train_accuracy = accuracy_score(y_train, y_train_pred) \n",
+    "dt_test_accuracy = accuracy_score(y_test, y_test_pred)\n",
     "\n",
-    "# Test set performance\n",
-    "dt_test_accuracy = accuracy_score(y_test, y_test_pred) # Calculate Accuracy\n",
-    "\n",
-    "print('- Training Set Accuracy: %s' % dt_train_accuracy)\n",
-    "print('- Test Set Accuracy: %s' % dt_test_accuracy)"
+    "print('Training Set Accuracy: %s' % dt_train_accuracy)\n",
+    "print('Test Set Accuracy: %s' % dt_test_accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 300,
    "id": "0f9e8843",
    "metadata": {},
    "outputs": [
@@ -159,32 +140,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Training Set Accuracy: 1.0\n",
-      "- Test Set Accuracy: 0.5\n"
+      "Training Set Accuracy: 1.0\n",
+      "Test Set Accuracy: 0.6\n"
      ]
     }
    ],
    "source": [
+    "# Multilayer Perceptron Classifier - \n",
     "mlp = MLPClassifier(alpha=1, max_iter=1000)\n",
     "mlp.fit(X_train, y_train)\n",
     "\n",
-    "# Make predictions\n",
+    "# Predictions\n",
     "y_train_pred = mlp.predict(X_train)\n",
     "y_test_pred = mlp.predict(X_test)\n",
     "\n",
-    "# Training set performance\n",
-    "mlp_train_accuracy = accuracy_score(y_train, y_train_pred) # Calculate Accuracy\n",
+    "# Training and Test set - Accuracy\n",
+    "mlp_train_accuracy = accuracy_score(y_train, y_train_pred) \n",
+    "mlp_test_accuracy = accuracy_score(y_test, y_test_pred) \n",
     "\n",
-    "# Test set performance\n",
-    "mlp_test_accuracy = accuracy_score(y_test, y_test_pred) # Calculate Accuracy\n",
-    "\n",
-    "print('- Training Set Accuracy: %s' % mlp_train_accuracy)\n",
-    "print('- Test Set Accuracy: %s' % mlp_test_accuracy)"
+    "print('Training Set Accuracy: %s' % mlp_train_accuracy)\n",
+    "print('Test Set Accuracy: %s' % mlp_test_accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 301,
    "id": "760de793",
    "metadata": {},
    "outputs": [
@@ -192,47 +172,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Training Set Accuracy: 1.0\n",
-      "- Test Set Accuracy: 0.5\n"
+      "Training Set Accuracy: 1.0\n",
+      "Test Set Accuracy: 0.6\n"
      ]
     }
    ],
    "source": [
-    "estimator_list = [('dt',dt),('mlp',mlp) ]\n",
+    "model_list = [('dt',dt),('mlp',mlp) ]\n",
     "\n",
-    "# Build stack model\n",
-    "stack_model = StackingClassifier(\n",
-    "    estimators=estimator_list, final_estimator=LogisticRegression()\n",
-    ")\n",
+    "# Stack model\n",
+    "stack_model = StackingClassifier(estimators=model_list, final_estimator=LogisticRegression())\n",
     "\n",
-    "# Train stacked model\n",
+    "# Fit stacked_model to the training data\n",
     "stack_model.fit(X_train, y_train)\n",
     "\n",
-    "# Make predictions\n",
+    "# Predictions\n",
     "y_train_pred = stack_model.predict(X_train)\n",
     "y_test_pred = stack_model.predict(X_test)\n",
     "\n",
-    "# Training set model performance\n",
-    "stack_model_train_accuracy = accuracy_score(y_train, y_train_pred) # Calculate Accuracy\n",
+    "# Training and Test set - Accuracy\n",
+    "stack_train_accuracy = accuracy_score(y_train, y_train_pred) \n",
+    "stack_test_accuracy = accuracy_score(y_test, y_test_pred) \n",
     "\n",
-    "# Test set model performance\n",
-    "stack_model_test_accuracy = accuracy_score(y_test, y_test_pred) # Calculate Accuracy\n",
-    "\n",
-    "print('- Training Set Accuracy: %s' % stack_model_train_accuracy)\n",
-    "print('- Test Set Accuracy: %s' % stack_model_test_accuracy)"
+    "print('Training Set Accuracy: %s' % stack_train_accuracy)\n",
+    "print('Test Set Accuracy: %s' % stack_test_accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 302,
    "id": "f04e94a8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Accuracy Train List\n",
     "acc_train_list = {\n",
     "'dt': dt_train_accuracy,\n",
     "'mlp': mlp_train_accuracy,\n",
     "'stack': stack_model_train_accuracy}\n",
+    "\n",
+    "# Accuracy Test List\n",
     "acc_test_list = {\n",
     "'dt': dt_test_accuracy,\n",
     "'mlp': mlp_test_accuracy,\n",
@@ -241,106 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "id": "621a34f9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dt': 0.5, 'mlp': 0.5, 'stack': 0.5}"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "acc_test_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 303,
    "id": "b711cb87",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>dt</th>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mlp</th>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>stack</th>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Accuracy\n",
-       "dt          0.5\n",
-       "mlp         0.5\n",
-       "stack       0.5"
-      ]
-     },
-     "execution_count": 248,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "acc_df = pd.DataFrame.from_dict(acc_test_list, orient='index', columns=['Accuracy'])\n",
-    "acc_df"
+    "acc_df\n",
+    "acc_df.to_csv('Stacked Results.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 249,
-   "id": "47c90d4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.to_csv('results.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba156298",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
